Python_implm/simulation_runs/two_sample/contiVsDisc/setting1_easy/contiVsDisc_16.log
  File "/mnt/nas/users/mjm/GitHub/private_conti_test/Python_implm/simulation_runs/two_sample/contiVsDisc/setting1_easy/contiVsDisc_16.job", line 16
    CONDA_BIN_PATH=/opt/miniconda/bin
                   ^
SyntaxError: invalid syntax
